Fixed Small alignment issue with the leaderboard (#263)

--- a/flask_site/static/grid.css
+++ b/flask_site/static/grid.css
@@ -76,9 +76,8 @@
 }
 
 .leaderboard_body .center {
-    margin-left: auto;
-    margin-right: auto;
-    width: 165pt;
+    display: flex;
+    justify-content: center;
     margin-bottom: 10pt;
 }
 
